--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
 ---
+<div class="variable-support">Your browser doesn't variable fonts :-(</div>
 <h1>{{ site.title }}</h1>
 <p>{{ site.description }}</p>
