Add basic interactive text w/ variable sliders
Plus move font-specific data to _data folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@ layout: default
 ---
 
 <div class="variable-support">Your browser doesn't variable fonts :-(</div>
+
 <h1>{{ site.title }}</h1>
 <p>{{ site.description }}</p>
+
+<hr>
+
+{% include interactive-controls.html %}
+
+<hr>
 
 {% include character-grid.html %}
