Switch from Jekyll to 11ty

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: layouts/default.html
 ---
 
 <div class="variable-support">Your browser doesn't variable fonts :-(</div>
@@ -7,14 +7,14 @@ layout: default
 <h1>{{ site.title }}</h1>
 <p>{{ site.description }}</p>
 
-<hr>
+<hr />
 
 {% include interactive-controls.html %}
 
-<hr>
+<hr />
 
 {% include character-grid.html %}
 
-<hr>
+<hr />
 
 {% include animation.html %}
