Move layouts to src/_layouts

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-layout: layouts/default.html
+layout: default.html
 ---
 
 <div class="variable-support">Your browser doesn't variable fonts :-(</div>
