--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,21 @@
 layout: default.html
 ---
 
-<div class="variable-support">Your browser doesn't variable fonts :-(</div>
+<main>
+	<div class="variable-support">Your browser doesn't variable fonts :-(</div>
 
-<h1>{{ site.title }}</h1>
-<p>{{ site.description }}</p>
+	<h1>{{ site.title }}</h1>
+	<p>{{ site.description }}</p>
 
-<hr />
+	<hr />
 
-{% include interactive-controls.html %}
+	{% include interactive-controls.html %}
 
-<hr />
+	<hr />
 
-{% include character-grid.html %}
+	{% include character-grid.html %}
 
-<hr />
+	<hr />
 
-{% include animation.html %}
+	{% include animation.html %}
+</main>
