Lose the underscore for imported CSS files
Fixes #26

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@ layout: default.html
 </div>
 
 <div class="variable-support-message">
-	Your browser doesn't variable fonts :-(
+	Your browser doesn't do variable fonts :-(
 </div>
 
 <main>
