Generate "Axes & Instances" per font
TODO:
- Apply proper class so the correct font is used
- Loop over the other specimen components (grid
  and interactive controls)

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@ layout: default.html
 </div>
 
 <main>
-	{% include interactive-controls.html %}
+	{% for font in fonts %} {% if font[1].axes.length != 0 %} {% include
+	interactive-controls.html %} {% endif %} {% endfor %}
 
 	<hr />
 
