Generate all componets per font
Grids are generated for all fonts, sliders only for variable
fonts.

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,10 @@ layout: default.html
 
 <main>
 	{% for font in fonts %} {% if font[1].axes.length != 0 %} {% include
-	interactive-controls.html %} {% endif %} {% endfor %}
-
+	interactive-controls.html %}
 	<hr />
-
-	{% include character-grid.html %}
-
+	{% endif %} {% endfor %} {% for font in fonts %} {% include
+	character-grid.html %}
 	<hr />
-
-	{% include animation.html %}
+	{% endfor %} {% include animation.html %}
 </main>
